# security-webpage-tool-injection-defense

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DEV_GUIDE.md  LICENSE  QUICKSTART.md  README.md  README_DESKTOP.md  START_DEV.md  TAURI_BUILD.md  app.py  pyproject.toml  server.py  start-browser-dev.ps1  start-tauri-dev.ps1  start_dev.py
.github/workflows/: build-desktop.yml  ci.yml
config/: default.example.yaml  social.example.json
docker/: README.md  backend.Dockerfile  docker-compose.dev.yml  docker-compose.yml  frontend.Dockerfile  microsandbox.Dockerfile  sandbox-compose.override.yml.example  sandbox-compose.yml
docker/searxng/: settings.yml
docs/: README.md  sandbox.md
docs/01-getting-started/: quickstart.md
docs/02-concepts/: filesystem.md  social-messaging.md
docs/02-concepts/skills/: skills.md
docs/03-developing/: DEV_GUIDE.md  SCRIPTS.md  desktop-guide.md  development-guide.md  docker-services.md  releasing.md
docs/memory/: README.md  api.md  architecture.md  configuration.md  schema.md  troubleshooting.md
docs/tools/: planning_tool.md  tools.md
frontend/: .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.cjs  vite.config.ts
frontend/src/: App.tsx  global.d.ts  main.tsx  robot-animations.css  styles.css  styles.d.ts  vite-env.d.ts
frontend/src/components/: BrutalButton.tsx  BrutalDeleteButton.tsx  BrutalDeleteOverlay.tsx  BrutalMultiSelect.tsx  BrutalSelect.tsx  ChatInputPanel.tsx  ChatList.tsx  ChatWindow.tsx  ClickableContent.tsx  CodeBlock.tsx  ErrorBoundary.tsx  FileIcon.tsx  FilePicker.tsx  FileViewer.tsx  ImageViewer.tsx  LoadingDots.tsx  MCPServers.tsx  MarkdownRenderer.tsx  MessageBubble.tsx  NewChatView.tsx  PlanProgress.tsx  index.ts
frontend/src/components/chat/: AssistantMessage.tsx  FolderContextPicker.tsx  MarkdownRenderer.tsx  RightSidebar.tsx  RobotAvatar.tsx  ThinkingAnimation.tsx  UserMessage.tsx
frontend/src/components/memory/: ArchivalMemoryList.tsx  CoreMemoryBlock.tsx  MemoryCard.tsx  MemoryStats.tsx  MemoryView.tsx
frontend/src/components/settings/: SettingsModal.tsx
frontend/src/components/sidebar/: ConfigView.tsx  FilePreview.tsx  PlanView.tsx  SandboxFiles.tsx  Sidebar.tsx
frontend/src/components/skills/: SkillsView.tsx
frontend/src/hooks/: useChatStore.tsx  useImageUpload.ts  useMemory.ts  usePlan.ts  useSkills.ts  useUnifiedFileUpload.ts
frontend/src/lib/: api.ts  chatUtils.ts  fileUtils.ts  memoryApi.ts  skillsApi.ts  streaming.ts
frontend/src/types/: api.ts
scripts/: README.md  build_backend.py  build_tauri.ps1  build_tauri.sh  bump_version.py  dev.ps1  dev.sh  fix_timestamps.py  migrate_add_sandbox_enabled.py  migrate_add_sandbox_volumes.py  migrate_memory.py  setup.ps1  setup.sh  setup_memory_db.ps1  setup_memory_db.sh  start-tauri-dev.sh  suzent.ps1  uninstall.ps1  uninstall.sh
skills/filesystem/: SKILL.md
skills/notebook/: SKILL.md
skills/stock-analysis/: SKILL.md
src-tauri/: Cargo.toml  package-lock.json  package.json  tauri.conf.json  tauri.conf.prod.json
src-tauri/capabilities/: default.json
src-tauri/icons/: README.md  icon.icns
src-tauri/src/: backend.rs  main.rs
src/suzent/: agent_manager.py  app.py  cli.py  config.py  database.py  image_utils.py  llm.py  logger.py  plan.py  prompts.py  server.py  streaming.py
src/suzent/channels/: __init__.py  base.py  manager.py  telegram.py
src/suzent/core/: agent_serializer.py  context_injection.py  social_brain.py
src/suzent/memory/: README.md  __init__.py  demo.py  embeddings.py  lancedb_store.py  lifecycle.py  manager.py  memory_context.py  models.py  postgres_store.py  schema.sql  tools.py
src/suzent/routes/: browser_routes.py  chat_routes.py  config_routes.py  mcp_routes.py  memory_routes.py  sandbox_routes.py  skill_routes.py  system_routes.py
src/suzent/sandbox/: manager.py
src/suzent/skills/: __init__.py  loader.py  manager.py  models.py
src/suzent/tools/: bash_tool.py  browsing_tool.py  edit_file_tool.py  glob_tool.py  grep_tool.py  path_resolver.py  planning_tool.py  read_file_tool.py  registry.py  skill_tool.py  webpage_tool.py  websearch_tool.py  write_file_tool.py
tests/: check_litellm.py  test_database.py  test_lancedb_store.py  test_sandbox.py
tests/tools/: test_websearch_tool.py
