[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "suzent"
version = "0.1.0"
description = "Your personal Agent"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "crawl4ai>=0.7.3",
    "smolagents[litellm,mcp]",
    "starlette",
    "uvicorn",
    "python-dotenv",
    "loguru>=0.7.0",
    "pydantic>=2.0",
    "markitdown[all]",
    "httpx>=0.28.1",
    "pytest>=9.0.0",
    # Memory system dependencies
    # "asyncpg>=0.29.0",  # Removed for LanceDB migration
    # "pgvector>=0.3.6",  # Removed for LanceDB migration
    "lancedb>=0.17.0",
    "ddgs>=9.10.0",
]

[project.optional-dependencies]
# Kept for backwards compatibility, but memory is now required
memory = []

# Development dependencies
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
    "pre-commit>=3.0.0",
]

# All optional dependencies
all = [
    "suzent[memory,dev]",
]

[tool.pytest.ini_options]
markers = [
    "sandbox: marks tests that require microsandbox server (deselect with '-m \"not sandbox\"')",
]


