[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "suzent"
version = "0.1.1"
description = "Your personal Agent"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "crawl4ai>=0.7.3",
    "smolagents[litellm,mcp]",
    "starlette",
    "uvicorn",
    "python-dotenv",
    "loguru>=0.7.0",
    "pydantic>=2.0",
    "markitdown[all]",
    "httpx>=0.28.1",
    "pytest>=9.0.0",
    # Memory system dependencies
    # "asyncpg>=0.29.0",  # Removed for LanceDB migration
    # "pgvector>=0.3.6",  # Removed for LanceDB migration
    "lancedb>=0.17.0",
    "ddgs>=9.10.0",
    "sqlmodel>=0.0.22",
    "typer>=0.9.0",
]

[project.scripts]
suzent = "suzent.cli:app"


[project.optional-dependencies]
# Kept for backwards compatibility, but memory is now required
memory = []

# Development dependencies
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
    "pre-commit>=3.0.0",
    "nuitka>=2.0",
    "zstandard",
]

# All optional dependencies
all = [
    "suzent[memory,dev]",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
markers = [
    "sandbox: marks tests that require microsandbox server (deselect with '-m \"not sandbox\"')",
    "integration: marks tests that require external services",
    "slow: marks tests that take significant time to run",
    "stress: marks stress/load tests",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]


