[package]
name = "suzent"
version = "0.1.1"
description = "SUZENT - Your Personal Agent"
authors = ["SUZENT Team"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = ["devtools"] }
tauri-plugin-dialog = "2.0"
tauri-plugin-shell = "2.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["blocking"] }
tauri-plugin-fs = "2.4.5"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
